// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Router get / 1`] = `
Object {
  "@type": "WebPage",
  "hasPart": Object {
    "@id": "/header",
    "@type": "WPHeader",
    "hasPart": Array [
      Object {
        "@type": "SiteNavigationElement",
        "name": "About",
        "url": "/about",
      },
      Object {
        "@type": "SiteNavigationElement",
        "name": "Docs",
        "url": "/get-started",
      },
      Array [
        Object {
          "@type": "SiteNavigationElement",
          "name": "My first blog",
          "url": "/blogs/blog1",
        },
        Object {
          "@type": "SiteNavigationElement",
          "name": "My second blog",
          "url": "/blogs/blog2",
        },
      ],
    ],
    "headline": "Sambal",
    "potentialAction": Array [
      Object {
        "@type": "DownloadAction",
        "target": "https://github.com/chen4119/sambal",
      },
    ],
  },
  "mainEntity": Object {
    "@id": "/",
    "@type": "SoftwareSourceCode",
    "description": "A linked data static site generator",
    "headline": "A linked data static site generator",
    "name": "Sambal",
    "text": "<need to <> escape>",
  },
  "mainEntityOfPage": "/",
  "url": "/",
}
`;

exports[`Router get /alias/subfolder/blog1 1`] = `
Object {
  "@type": "WebPage",
  "description": "alias folder",
  "mainEntity": Object {
    "@id": "/blogs/blog1",
    "@type": "BlogPosting",
    "author": Object {
      "@id": "/john%20smith",
      "@type": "Person",
      "email": "smitty123@hotmail.com",
      "familyName": "Smith",
      "givenName": "John",
      "name": "John Smith",
    },
    "dateCreated": 2019-10-26T00:00:00.000Z,
    "dateModified": 2019-10-26T00:00:00.000Z,
    "encodingFormat": "text/markdown",
    "headline": "My first blog",
    "keywords": Array [
      "rxjs",
      "java script",
    ],
    "position": 1,
    "text": "

Hello world",
  },
  "mainEntityOfPage": "/blogs/blog1",
  "url": "/alias/subfolder/blog1",
}
`;

exports[`Router get /archive/2017/1 1`] = `
Object {
  "@type": "WebPage",
  "hasPart": Object {
    "@id": "/header",
    "@type": "WPHeader",
    "hasPart": Array [
      Object {
        "@type": "SiteNavigationElement",
        "name": "About",
        "url": "/about",
      },
      Object {
        "@type": "SiteNavigationElement",
        "name": "Docs",
        "url": "/get-started",
      },
      Array [
        Object {
          "@type": "SiteNavigationElement",
          "name": "My first blog",
          "url": "/blogs/blog1",
        },
        Object {
          "@type": "SiteNavigationElement",
          "name": "My second blog",
          "url": "/blogs/blog2",
        },
      ],
    ],
    "headline": "Sambal",
    "potentialAction": Array [
      Object {
        "@type": "DownloadAction",
        "target": "https://github.com/chen4119/sambal",
      },
    ],
  },
  "mainEntity": Object {
    "@type": "ListItem",
    "item": Object {
      "@id": "/collections/year/_part/year=2017/1",
      "@type": "ItemList",
      "itemListElement": Array [
        Object {
          "@id": "/blogs/blog2",
          "@type": "BlogPosting",
          "author": Object {
            "@id": "/john%20smith",
            "@type": "Person",
            "email": "smitty123@hotmail.com",
            "familyName": "Smith",
            "givenName": "John",
            "name": "John Smith",
          },
          "dateCreated": 2017-10-26T00:00:00.000Z,
          "dateModified": 2017-10-26T00:00:00.000Z,
          "encodingFormat": "text/markdown",
          "headline": "My second blog",
          "keywords": Array [
            "sambal",
            "java script",
          ],
          "position": 2,
          "text": "

Hello world2",
        },
      ],
    },
    "position": 0,
  },
  "mainEntityOfPage": "/archive/2017/1",
  "url": "/archive/2017/1",
}
`;

exports[`Router get /archive/org-a 1`] = `
Object {
  "@type": "WebPage",
  "hasPart": Object {
    "@id": "/header",
    "@type": "WPHeader",
    "hasPart": Array [
      Object {
        "@type": "SiteNavigationElement",
        "name": "About",
        "url": "/about",
      },
      Object {
        "@type": "SiteNavigationElement",
        "name": "Docs",
        "url": "/get-started",
      },
      Array [
        Object {
          "@type": "SiteNavigationElement",
          "name": "My first blog",
          "url": "/blogs/blog1",
        },
        Object {
          "@type": "SiteNavigationElement",
          "name": "My second blog",
          "url": "/blogs/blog2",
        },
      ],
    ],
    "headline": "Sambal",
    "potentialAction": Array [
      Object {
        "@type": "DownloadAction",
        "target": "https://github.com/chen4119/sambal",
      },
    ],
  },
  "mainEntity": Object {
    "@id": "/archive/org-a",
    "@type": "Organization",
    "address": Object {
      "@type": "PostalAddress",
      "postalCode": 12345,
      "streetAddress": "1 main st",
    },
    "identifier": "org-a",
    "name": "org a",
    "telephone": "123-435-2334",
  },
  "mainEntityOfPage": "/archive/org-a",
  "url": "/archive/org-a",
}
`;

exports[`Router get /blogs/blog1 1`] = `
Object {
  "@type": "WebPage",
  "hasPart": Array [
    Object {
      "@type": "SiteNavigationElement",
      "name": "About",
      "url": "/about",
    },
  ],
  "mainEntity": Object {
    "@id": "/blogs/blog1",
    "@type": "BlogPosting",
    "author": Object {
      "@id": "/john%20smith",
      "@type": "Person",
      "email": "smitty123@hotmail.com",
      "familyName": "Smith",
      "givenName": "John",
      "name": "John Smith",
    },
    "dateCreated": 2019-10-26T00:00:00.000Z,
    "dateModified": 2019-10-26T00:00:00.000Z,
    "encodingFormat": "text/markdown",
    "headline": "My first blog",
    "keywords": Array [
      "rxjs",
      "java script",
    ],
    "position": 1,
    "text": "

Hello world",
  },
  "mainEntityOfPage": "/blogs/blog1",
  "url": "/blogs/blog1",
}
`;

exports[`Router iterate routes 1`] = `
Array [
  Object {
    "@type": "WebPage",
    "hasPart": Object {
      "@id": "/header",
      "@type": "WPHeader",
      "hasPart": Array [
        Object {
          "@type": "SiteNavigationElement",
          "name": "About",
          "url": "/about",
        },
        Object {
          "@type": "SiteNavigationElement",
          "name": "Docs",
          "url": "/get-started",
        },
        Array [
          Object {
            "@type": "SiteNavigationElement",
            "name": "My first blog",
            "url": "/blogs/blog1",
          },
          Object {
            "@type": "SiteNavigationElement",
            "name": "My second blog",
            "url": "/blogs/blog2",
          },
        ],
      ],
      "headline": "Sambal",
      "potentialAction": Array [
        Object {
          "@type": "DownloadAction",
          "target": "https://github.com/chen4119/sambal",
        },
      ],
    },
    "mainEntity": Object {
      "@id": "/",
      "@type": "SoftwareSourceCode",
      "description": "A linked data static site generator",
      "headline": "A linked data static site generator",
      "name": "Sambal",
      "text": "<need to <> escape>",
    },
    "mainEntityOfPage": "/",
    "url": "/",
  },
  Object {
    "@type": "WebPage",
    "hasPart": Array [
      Object {
        "@type": "SiteNavigationElement",
        "name": "About",
        "url": "/about",
      },
    ],
    "mainEntity": Object {
      "@id": "/blogs/blog1",
      "@type": "BlogPosting",
      "author": Object {
        "@id": "/john%20smith",
        "@type": "Person",
        "email": "smitty123@hotmail.com",
        "familyName": "Smith",
        "givenName": "John",
        "name": "John Smith",
      },
      "dateCreated": 2019-10-26T00:00:00.000Z,
      "dateModified": 2019-10-26T00:00:00.000Z,
      "encodingFormat": "text/markdown",
      "headline": "My first blog",
      "keywords": Array [
        "rxjs",
        "java script",
      ],
      "position": 1,
      "text": "

Hello world",
    },
    "mainEntityOfPage": "/blogs/blog1",
    "url": "/blogs/blog1",
  },
  Object {
    "@type": "WebPage",
    "hasPart": Array [
      Object {
        "@type": "SiteNavigationElement",
        "name": "About",
        "url": "/about",
      },
    ],
    "mainEntity": Object {
      "@id": "/blogs/blog2",
      "@type": "BlogPosting",
      "author": Object {
        "@id": "/john%20smith",
        "@type": "Person",
        "email": "smitty123@hotmail.com",
        "familyName": "Smith",
        "givenName": "John",
        "name": "John Smith",
      },
      "dateCreated": 2017-10-26T00:00:00.000Z,
      "dateModified": 2017-10-26T00:00:00.000Z,
      "encodingFormat": "text/markdown",
      "headline": "My second blog",
      "keywords": Array [
        "sambal",
        "java script",
      ],
      "position": 2,
      "text": "

Hello world2",
    },
    "mainEntityOfPage": "/blogs/blog2",
    "url": "/blogs/blog2",
  },
  Object {
    "@type": "WebPage",
    "hasPart": Object {
      "@id": "/header",
      "@type": "WPHeader",
      "hasPart": Array [
        Object {
          "@type": "SiteNavigationElement",
          "name": "About",
          "url": "/about",
        },
        Object {
          "@type": "SiteNavigationElement",
          "name": "Docs",
          "url": "/get-started",
        },
        Array [
          Object {
            "@type": "SiteNavigationElement",
            "name": "My first blog",
            "url": "/blogs/blog1",
          },
          Object {
            "@type": "SiteNavigationElement",
            "name": "My second blog",
            "url": "/blogs/blog2",
          },
        ],
      ],
      "headline": "Sambal",
      "potentialAction": Array [
        Object {
          "@type": "DownloadAction",
          "target": "https://github.com/chen4119/sambal",
        },
      ],
    },
    "mainEntity": Object {
      "@id": "/archive/org-a",
      "@type": "Organization",
      "address": Object {
        "@type": "PostalAddress",
        "postalCode": 12345,
        "streetAddress": "1 main st",
      },
      "identifier": "org-a",
      "name": "org a",
      "telephone": "123-435-2334",
    },
    "mainEntityOfPage": "/archive/org-a",
    "url": "/archive/org-a",
  },
  Object {
    "@type": "WebPage",
    "hasPart": Object {
      "@id": "/header",
      "@type": "WPHeader",
      "hasPart": Array [
        Object {
          "@type": "SiteNavigationElement",
          "name": "About",
          "url": "/about",
        },
        Object {
          "@type": "SiteNavigationElement",
          "name": "Docs",
          "url": "/get-started",
        },
        Array [
          Object {
            "@type": "SiteNavigationElement",
            "name": "My first blog",
            "url": "/blogs/blog1",
          },
          Object {
            "@type": "SiteNavigationElement",
            "name": "My second blog",
            "url": "/blogs/blog2",
          },
        ],
      ],
      "headline": "Sambal",
      "potentialAction": Array [
        Object {
          "@type": "DownloadAction",
          "target": "https://github.com/chen4119/sambal",
        },
      ],
    },
    "mainEntity": Object {
      "@id": "/archive/org-b",
      "@type": "Organization",
      "identifier": "org-b",
      "name": "org b",
      "telephone": "123-435-1564",
    },
    "mainEntityOfPage": "/archive/org-b",
    "url": "/archive/org-b",
  },
  Object {
    "@type": "WebPage",
    "hasPart": Object {
      "@id": "/header",
      "@type": "WPHeader",
      "hasPart": Array [
        Object {
          "@type": "SiteNavigationElement",
          "name": "About",
          "url": "/about",
        },
        Object {
          "@type": "SiteNavigationElement",
          "name": "Docs",
          "url": "/get-started",
        },
        Array [
          Object {
            "@type": "SiteNavigationElement",
            "name": "My first blog",
            "url": "/blogs/blog1",
          },
          Object {
            "@type": "SiteNavigationElement",
            "name": "My second blog",
            "url": "/blogs/blog2",
          },
        ],
      ],
      "headline": "Sambal",
      "potentialAction": Array [
        Object {
          "@type": "DownloadAction",
          "target": "https://github.com/chen4119/sambal",
        },
      ],
    },
    "mainEntity": Object {
      "@type": "ListItem",
      "item": Object {
        "@id": "/collections/year/_part/year=2019/1",
        "@type": "ItemList",
        "itemListElement": Array [
          Object {
            "@id": "/blogs/blog1",
            "@type": "BlogPosting",
            "author": Object {
              "@id": "/john%20smith",
              "@type": "Person",
              "email": "smitty123@hotmail.com",
              "familyName": "Smith",
              "givenName": "John",
              "name": "John Smith",
            },
            "dateCreated": 2019-10-26T00:00:00.000Z,
            "dateModified": 2019-10-26T00:00:00.000Z,
            "encodingFormat": "text/markdown",
            "headline": "My first blog",
            "keywords": Array [
              "rxjs",
              "java script",
            ],
            "position": 1,
            "text": "

Hello world",
          },
        ],
      },
      "position": 0,
    },
    "mainEntityOfPage": "/archive/2019/1",
    "url": "/archive/2019/1",
  },
  Object {
    "@type": "WebPage",
    "hasPart": Object {
      "@id": "/header",
      "@type": "WPHeader",
      "hasPart": Array [
        Object {
          "@type": "SiteNavigationElement",
          "name": "About",
          "url": "/about",
        },
        Object {
          "@type": "SiteNavigationElement",
          "name": "Docs",
          "url": "/get-started",
        },
        Array [
          Object {
            "@type": "SiteNavigationElement",
            "name": "My first blog",
            "url": "/blogs/blog1",
          },
          Object {
            "@type": "SiteNavigationElement",
            "name": "My second blog",
            "url": "/blogs/blog2",
          },
        ],
      ],
      "headline": "Sambal",
      "potentialAction": Array [
        Object {
          "@type": "DownloadAction",
          "target": "https://github.com/chen4119/sambal",
        },
      ],
    },
    "mainEntity": Object {
      "@type": "ListItem",
      "item": Object {
        "@id": "/collections/year/_part/year=2017/1",
        "@type": "ItemList",
        "itemListElement": Array [
          Object {
            "@id": "/blogs/blog2",
            "@type": "BlogPosting",
            "author": Object {
              "@id": "/john%20smith",
              "@type": "Person",
              "email": "smitty123@hotmail.com",
              "familyName": "Smith",
              "givenName": "John",
              "name": "John Smith",
            },
            "dateCreated": 2017-10-26T00:00:00.000Z,
            "dateModified": 2017-10-26T00:00:00.000Z,
            "encodingFormat": "text/markdown",
            "headline": "My second blog",
            "keywords": Array [
              "sambal",
              "java script",
            ],
            "position": 2,
            "text": "

Hello world2",
          },
        ],
      },
      "position": 0,
    },
    "mainEntityOfPage": "/archive/2017/1",
    "url": "/archive/2017/1",
  },
  Object {
    "@type": "WebPage",
    "description": "alias folder",
    "mainEntity": Object {
      "@id": "/blogs/blog1",
      "@type": "BlogPosting",
      "author": Object {
        "@id": "/john%20smith",
        "@type": "Person",
        "email": "smitty123@hotmail.com",
        "familyName": "Smith",
        "givenName": "John",
        "name": "John Smith",
      },
      "dateCreated": 2019-10-26T00:00:00.000Z,
      "dateModified": 2019-10-26T00:00:00.000Z,
      "encodingFormat": "text/markdown",
      "headline": "My first blog",
      "keywords": Array [
        "rxjs",
        "java script",
      ],
      "position": 1,
      "text": "

Hello world",
    },
    "mainEntityOfPage": "/blogs/blog1",
    "url": "/alias/subfolder/blog1",
  },
]
`;
